--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.1"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^8.11.0",
     "supertest": "^7.0.0"
   }
 }
